# vcpkg-C-test

./: CMakeLists.txt  Makefile  README.md  vcpkg.json
src/: game.c  main.c  rendering.c  rendering.h  system.c  system.h
src/Animations/Player/: playerAnimations.c  playerAnimations.h
src/Core/: rendering.c  rendering.h  system.h
src/GameObjects/Player/: player.c  player.h
src/Scenes/: level1.c  level1.h
